# laser-dog

./: .gitignore  .gitmodules  README.md  calibration.txt  example.py  pyproject.toml  q_learner.py  run
arduino/bluetooth_camera_debug/: bluetooth_camera_debug.ino
arduino/bluetooth_echo_server/: bluetooth_echo_server.ino
arduino/combined_collect/: combined_collect.ino
arduino/continual_camera_timed/: continual_camera_timed.ino
arduino/robot_imu_collect/: robot_imu_collect.ino
arduino/servo_bluetooth_server/: servo_bluetooth_server.ino
arduino/servo_control/: servo_control.ino
arduino/ultrasonic_arduino/: ultrasonic_arduino.ino
collect/: collect.py  raw_data.csv
real_world/: .gitignore  backup.csv  basic_classifier.py  bt_serial.py  collect.py  control.py  dataloader.py  dataset.py  get_pointer_telemetry.py  get_pointer_telemtry.py  get_robot_telemetry.py  integrate.py  labels.csv  laser_tracking_efficientnetb7_tensorflow_theta_value.py  pointer_data.csv  raw_data.csv  reflash  robot_data.csv  train.py  turn_raw.txt  walk_raw.txt
