[tool.poetry]
name = "cse-598-project"
version = "0.1.0"
description = ""
authors = ["LSaldyt <lucassaldyt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.*"
rex-gym = {path = "rex-gym", develop = true}
tensorflow-probability = "0.8"
tensorflow = "1.15.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
